# hash-color

./: CUSTOMIZING.md  Cargo.toml  GETTING_STARTED.md  README.org  config.example.toml  flake.nix
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  logging.rs  main.rs
crates/cli/tests/: integration_test.rs
crates/lib/: Cargo.toml
crates/lib/src/: color.rs  colorize.rs  detect.rs  exclusion.rs  hash.rs  lib.rs
