[package]
name = "hash-color-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hash-color"
path = "src/main.rs"

[dev-dependencies]
regex = "1"

[dependencies]
hash-color-lib = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }
